[b] Fix overflow styling bug

--- a/static/css/packages/show.scss
+++ b/static/css/packages/show.scss
@@ -419,10 +419,10 @@
           border-radius: 4px;
           margin: 0;
           padding: 5px 8px;
-          display: block;
+          display: inline-block;
           border: none;
           white-space: pre;
-          overflow: scroll;
+          overflow: hidden;
         }
 
         pre {
